src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__mz_timestamp__cast_timestamp_tz_to_mz_timestamp__impl.snap
---
source: src/expr/src/scalar/func/impls/mz_timestamp.rs
expression: info
---
Info {
    output_type_nullable: SqlColumnType {
        scalar_type: MzTimestamp,
        nullable: true,
    },
    output_type_nonnullable: SqlColumnType {
        scalar_type: MzTimestamp,
        nullable: false,
    },
    preserves_uniqueness: false,
    inverse: None,
    is_monotone: true,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: true,
}
